plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id
repositories {
    // 前提MODをCFから引っ張るため.
    maven {
        url = uri("https://www.cursemaven.com")
    }

    // Optional MOD 検証用(EasyMagic / Puzzles Lib).
    maven {
        name = "Modrinth"
        url = uri("https://api.modrinth.com/maven")
        content {
            includeGroup("maven.modrinth")
        }
    }
    // ISS
    maven {
        url = uri("https://code.redspace.io/releases")
    }

    // GeckoLib
    maven {
        name = 'GeckoLib'
        url = uri('https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/')
        content {
            includeGroupByRegex("software\\.bernie.*")
            includeGroup("com.eliotlash.mclib")
        }
    }

    // JEI
    maven {
        url = uri("https://maven.blamejared.com")
    }

    // Curios
    maven {
        url = uri("https://maven.theillusivec4.top/")
    }

    // Create が同梱している Registrate API を compileOnly 参照するため.
    maven {
        url = uri("https://maven.tterrag.com/")
    }
}

base {
    archivesName = mod_artifact_name
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {

    // ISSへの強依存を追加.
    implementation "io.redspace:irons_spellbooks:${irons_spells_version}"

    // GeckoLib.
    implementation "software.bernie.geckolib:geckolib-neoforge-${minecraft_version}:${geckolib_version}"

    // Curios APIをコンパイル時にも参照する.
    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"

    // ISS前提MOD(2026/1/21時点それぞれ最新,動作確認用のみなのでruntimeOnly)
    runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    runtimeOnly "curse.maven:playeranimator-658587:6024462"

    // Create.
    // Create 連携のコンパイル用.
    // ランタイム検証時のみ必要に応じてON.
    compileOnly "curse.maven:create-328085:7178775"
    compileOnly "com.tterrag.registrate:Registrate:${registrate_version}"
    // runtimeOnly "curse.maven:create-328085:7178775"

    // EasyMagic.
    // 必要に応じてON、デフォルトは入れない(前提にはしないため)
    // localRuntime "maven.modrinth:puzzles-lib:v21.1.39-1.21.1-NeoForge"
    // localRuntime "maven.modrinth:easy-magic:v21.1.4-1.21.1-NeoForge"

    // Farmer's Delight.
    // 必要に応じてON、デフォルトは入れない(前提にはしないため)
    // HarvestMoon の互換回帰を GameTest で検証するため、開発環境では読み込む.
    runtimeOnly "maven.modrinth:farmers-delight:cYqC3svy"

    // Better Combat.
    // Better Combat の攻撃開始フックへ接続する互換コードのコンパイル用.
    // ランタイムは必要に応じてON(1.20.1と異なり前提が増えている点に注意)
    compileOnly "maven.modrinth:better-combat:2NyTus6V"
    // runtimeOnly "maven.modrinth:cloth-config:DqgODWcH"
    // runtimeOnly "maven.modrinth:better-combat:2NyTus6V"

    // Lootr.
    // TreasureDivination が Lootr の個人開封済み判定へ接続するためのコンパイル用.
    compileOnly "noobanidus.mods.lootr:lootr-neoforge:${lootr_version}"

    // Lodestone / Malum.
    // 必要に応じてランタイムはONにする.
    compileOnly "curse.maven:lodestone-616457:7264731"
    compileOnly "curse.maven:malum-484064:7307339"
    //runtimeOnly "curse.maven:lodestone-616457:7264731"
    //runtimeOnly "curse.maven:malum-484064:7307339"

    // JEI.
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // Jade.
    // 1.21.1 NeoForge 版の Modrinth version ID は build.gradle に直接固定し、
    // mods.toml 側で使う表示用バージョン文字列だけを gradle.properties に持つ。
    compileOnly "maven.modrinth:jade:yd8FKCmx"
    runtimeOnly "maven.modrinth:jade:yd8FKCmx"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_display_url        : mod_display_url,
            mod_issue_tracker_url  : mod_issue_tracker_url,
            mod_logo_file          : mod_logo_file,
            irons_spells_version   : irons_spells_version,
            geckolib_version       : geckolib_version,
            curios_version         : curios_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            create_version         : create_version,
            jade_version           : jade_version,
            lodestone_version      : lodestone_version,
            malum_version          : malum_version,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            mod_display_url        : mod_display_url,
            mod_issue_tracker_url  : mod_issue_tracker_url,
            mod_logo_file          : mod_logo_file,
            irons_spells_version   : irons_spells_version,
            geckolib_version       : geckolib_version,
            curios_version         : curios_version,
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/neoforge.mods.toml') {
        expand replaceProperties
    }
}

tasks.named('jar', Jar).configure {
    // GameTest 用のクラス/structure は dev 実行だけで使い、配布 jar には含めない。
    exclude('jp/aquafactory/apprenticecodex/gametest/**')
    exclude('data/apprenticecodex/structure/gametest/**')

    archiveBaseName.set(mod_artifact_name)
    archiveVersion.set("${project.mod_version}+mc${project.minecraft_version}")
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url = uri(project.file("repo"))
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

def validateItemModelLoaders = tasks.register('validateItemModelLoaders') {
    group = 'verification'
    description = '1.21.1 向け item model に旧 forge loader 名が残っていないか検証する。'
    def modelFiles = layout.projectDirectory.dir('src/main/resources/assets/apprenticecodex/models/item').asFileTree.matching {
        include '**/*.json'
    }
    inputs.files(modelFiles)

    doLast {
        def invalidModels = inputs.files.files.findAll { file ->
            file.getText('UTF-8').contains('"loader": "forge:')
        }

        if (!invalidModels.isEmpty()) {
            throw new GradleException(
                    "旧 forge loader が残っている item model があります:\n" +
                            invalidModels.collect { "- ${project.relativePath(it)}" }.join('\n')
            )
        }
    }
}

tasks.named('check').configure {
    dependsOn validateItemModelLoaders
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
